# oio-sds-cpp

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
doc/: oio-client-data.dia  oio-libraries-dependencies.dia
http-parser/: http_parser.cpp  http_parser.h  test-trailers.cpp
oio/api/: Download.h  Listing.h  Removal.h  Upload.h  blob.cpp  blob.h
oio/api/blob/: Download.h  Listing.h  Removal.h  Upload.h
oio/http/coro/: TestHttp.cpp  Upload.cpp  Upload.h  blob.h
oio/http/coro/blob/: Download.cpp  Listing.cpp  Removal.cpp  TestHttp.cpp  Upload.cpp
oio/http/imperative/: README.md  blob.cpp  blob.h
oio/kinetic/blob/: Download.cpp  Download.h  Listing.cpp  Listing.h  Removal.cpp  Removal.h  TestClient.cpp  Upload.cpp  Upload.h
oio/kinetic/client/: ClientInterface.h  CoroutineClient.cpp  CoroutineClient.h  CoroutineClientFactory.cpp  CoroutineClientFactory.h  PendingExchange.h  TestExchange.cpp
oio/kinetic/coro/: README.md  blob.cpp  blob.h
oio/kinetic/coro/blob/: Download.cpp  Download.h  Listing.cpp  Listing.h  Removal.cpp  Removal.h  TestClient.cpp  Upload.cpp  Upload.h
oio/kinetic/coro/client/: ClientInterface.h  CoroutineClient.cpp  CoroutineClient.h  CoroutineClientFactory.cpp  CoroutineClientFactory.h  PendingExchange.cpp  PendingExchange.h  TestExchange.cpp
oio/kinetic/coro/rpc/: Delete.cpp  Delete.h  Exchange.cpp  Exchange.h  Get.cpp  Get.h  GetKeyRange.cpp  GetKeyRange.h  GetLog.cpp  GetNext.cpp  GetNext.h  Put.cpp  Put.h  Request.h
oio/kinetic/proxy/: headers.h  headers.rl  main.cpp
oio/kinetic/rpc/: Delete.cpp  Delete.h  Exchange.h  Get.cpp  GetKeyRange.cpp  GetKeyRange.h  GetNext.h  Put.cpp  Put.h  Request.h  kinetic.proto
oio/local/: blob.cpp  blob.h
oio/local/blob/: Download.cpp  Listing.cpp  Removal.cpp  TestLocal.cpp  Upload.cpp
src/: CMakeLists.txt
src/oio/api/: blob.cpp  blob.h  blob.hpp  common.cpp  common.h  common.hpp  resolver.hpp  serialize_def.h
src/oio/blob/ec/: blob.cpp  blob.h  blob.hpp  command.h
src/oio/blob/http/: blob.cpp  blob.h  blob.hpp  proxygen.cpp  proxygen.hpp  socket_map.h
src/oio/blob/kinetic/coro/: ClientInterface.h  CoroutineClient.cpp  CoroutineClient.h  CoroutineClientFactory.cpp  CoroutineClientFactory.h  PendingExchange.cpp  PendingExchange.h  RPC.cpp  RPC.h  blob.cpp  blob.h  blob.hpp
src/oio/blob/kinetic/coro/client/: ClientInterface.h  CoroutineClient.cpp  CoroutineClient.h  CoroutineClientFactory.cpp  CoroutineClientFactory.h  PendingExchange.cpp  PendingExchange.h
src/oio/blob/kinetic/coro/rpc/: Delete.cpp  Delete.h  Exchange.cpp  Get.cpp  GetKeyRange.cpp  GetKeyRange.h  GetLog.cpp  GetNext.cpp  Put.cpp  Put.h
src/oio/blob/local/: blob.cpp  blob.h  blob.hpp
src/oio/blob/mem/: blob.cpp  blob.h  blob.hpp
src/oio/blob/rawx/: blob.cpp  blob.h  blob.hpp  command.h
src/oio/blob/router/: blob.cpp  blob.h  blob.hpp
src/oio/container/: command.h  container.cpp  container.h  container.hpp
src/oio/content/: command.h  content.cpp  content.h  content.hpp
src/oio/directory/: command.h  dir.cpp  dir.h  dir.hpp
src/oio/ec/: blob.cpp  blob.h  command.h  erasure.c  erasure.h
src/oio/http/: README.md  blob.cpp  blob.h  socket_map.h
src/oio/kinetic/coro/: blob.cpp  blob.h
src/oio/kinetic/coro/client/: ClientInterface.h  CoroutineClient.cpp  CoroutineClient.h  CoroutineClientFactory.cpp  CoroutineClientFactory.h  PendingExchange.cpp  PendingExchange.h
src/oio/kinetic/coro/rpc/: Delete.cpp  Delete.h  Exchange.cpp  Exchange.h  Get.cpp  Get.h  GetKeyRange.cpp  GetKeyRange.h  GetLog.cpp  GetLog.h  GetNext.cpp  GetNext.h  Put.cpp  Put.h
src/oio/local/: blob.cpp  blob.h
src/oio/mem/: blob.cpp  blob.h
src/oio/rawx/: blob.cpp  blob.h  command.h
src/oio/router/: blob.cpp  blob.h
src/oio/sds/: command.h  sds.cpp  sds.h  sds.hpp
src/utils/: Http.cpp  Http.h  command.h  http.cpp  http.hpp  macros.h  net.cpp  net.h  net.hpp  proxygen.cpp  proxygen.hpp  serialize_def.h  utils.cpp  utils.h  utils.hpp
tests/: TestBlobHttp.cpp  TestBlobKinetic.cpp  TestBlobLocal.cpp  TestHttpClient.cpp  TestKineticExchange.cpp  TestKineticRpc.cpp  TestRandomPut.cpp  TestUtils.cpp
tests/common/: BlobTestSuite.h
tests/func/: CMakeLists.txt  TestBlobHttp.cpp  TestBlobHttpProxygen.cpp  TestBlobHttpProxygenRepli.cpp  TestBlobKinetic.cpp  TestBlobRawx.cpp  TestClient.cpp  TestHttpClient_OioProxy.cpp  TestHttpClient_OioRawx.cpp  TestKineticRpc.cpp  TestRoundTrip.cpp
tests/unit/: CMakeLists.txt  HTTPTransactionMocks.h  Makefile  TestBlobLocal.cpp  TestBlobMem.cpp  TestProxygen.cpp  TestUtils.cpp
utils/: Addr.cpp  Addr.h  Http.cpp  Http.h  MillSocket.cpp  MillSocket.h  Socket.cpp  Socket.h  macros.h  net.cpp  net.h  utils.cpp  utils.h
